--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
-.App {
+.centerText {
   text-align: center;
+}
+
+.resultsContainer {
+  display: flex;
+  flex: 1;
+  align-items: center;
+}
+
+.icon {
+  padding-right: 10px;
+}
+
+.green {
+  color: green;
+}
+
+.red {
+  color: red;
 }
